# serializer version: 1
# name: test_rust_records_are_routed_to_handlers
  list([
    'rust.test [INFO] hello from rust',
  ])
# ---
# name: test_rust_records_respect_femtologger_levels
  list([
  ])
# ---
# name: test_rust_logging_bridge_is_idempotent
  list([
    'rust.idempotent [INFO] second install',
  ])
# ---
# name: test_rust_logging_bridge_rejects_preinstalled_global_logger
  list([
    'global Rust logger is already set; femtologging cannot install the log bridge',
  ])
# ---
